--- a/submission/submission.html
+++ b/submission/submission.html
@@ -35,7 +35,7 @@
                 <!-- STUDENT INPUT ENTRY -->
                 <!--******************************************************************************************************************
                 PLEASE CHANGE THE HREF URL FOR YOUR SPECIFIC 3D App URL TO ACCESS YOUR 3D App-->
-                <a href="https://users.sussex.ac.uk/~martinwh/3dapp/lab9/CocaCola_VM/index.php/apicocacola" class="btn btn-primary">My 3D App</a>
+                <a href="https://users.sussex.ac.uk/~db596" class="btn btn-primary">My 3D App</a>
                 <!--*******************************************************************************************************************-->
               </li>
               <li class="nav-item">
@@ -51,9 +51,9 @@
                   <!--******************************************************************************************************************
                   PLEASE CHANGE THE HREF URL FOR YOUR SPECIFIC 3D App and GITHUB URLs TO ACCESS YOUR 3D App, Codebase and VRML/X3D MODELS-->
                   <a class="dropdown-item" href="https://canvas.sussex.ac.uk/courses/23366/pages/e-submission-instructions">Instructions</a>
-                  <a class="dropdown-item" href="https://users.sussex.ac.uk/~martinwh/3dapp/lab9/CocaCola_VM/index.php/apicocacola">3D App</a>
-                  <a class="dropdown-item" href="https://github.com/martinwh/3D_Apps_2020/tree/master/lab9/CocaCola_VM">GitHub Codebase</a>
-                  <a class="dropdown-item" href="https://github.com/martinwh/3D_Apps_2020/tree/master/lab9/CocaCola_VM/application/assets/x3d#">GitHub 3D Models</a>
+                  <a class="dropdown-item" href="https://users.sussex.ac.uk/~db596">3D App</a>
+                  <a class="dropdown-item" href="https://github.com/demrebicer/sussex_mobile_3d_applications_project">GitHub Codebase</a>
+                  <a class="dropdown-item" href="https://github.com/demrebicer/sussex_mobile_3d_applications_project/tree/main/public/assets">GitHub 3D Models</a>
                   <!--*******************************************************************************************************************-->
                   <a class="dropdown-item" href="submission.html">Deeper Understanding</a>
                   <a class="dropdown-item" href="submission.html">Last Submission File</a>
@@ -156,9 +156,9 @@
                 <!--**************************************************************************************
                 PLEASE EDIT THE PARAGRAPH TAGS BELOW TO INPUT YOUR LAST FILE UPLOADED FILENAME, DATE AND TIME
                 ******************************************************************************************-->
-                <li><p class="card-text"><b>Last File Uploaded Filename</b>: ...</p></li>
-                <li><p class="card-text"><b>Date Uploaded</b>: ...</p></li>
-                <li><p class="card-text"><b>Time Uploaded</b>: ...</p></li>
+                <li><p class="card-text"><b>Last File Uploaded Filename</b>: submission.html</p></li>
+                <li><p class="card-text"><b>Date Uploaded</b>: 20 March 2024</p></li>
+                <li><p class="card-text"><b>Time Uploaded</b>: 14:24</p></li>
                 <!--***************************************************************************************-->
               </ul>
               <a href="https://canvas.sussex.ac.uk/courses/23366/pages/instructions-for-finding-last-file-uploaded" class="btn btn-primary">Instructions for finding Last FIle Uploaded</a>
@@ -185,7 +185,7 @@
             <!--**************************************************************************************
             PLEASE EDIT THE PARAGRAPH TAGS BELOW TO UPDATE YOUR STATEMENT OF ORIGINALITY
             ******************************************************************************************-->
-            <p>This assignment is submitted as part requirement for the degree of ... at the University of Sussex. It is the product of my own labour except where indicated in the accompanying codebase. This assignment may be freely copied and distributed provided the source is acknowledged. I hereby give / withhold permission for a copy of this assignment to be loaned out to students in future years (delete/update as necessary).</p>
+            <p>This assignment is submitted as part requirement for the degree of Advanced Computer Science MSc at the University of Sussex. It is the product of my own labour except where indicated in the accompanying codebase. This assignment may be freely copied and distributed provided the source is acknowledged. I hereby give / withhold permission for a copy of this assignment to be loaned out to students in future years (delete/update as necessary).</p>
             <!--***************************************************************************************-->
           </div>
 
